# home

./: .gitignore  .gitmodules  README.md
docker/: Dockerfile  vimrc
environment/: setup.py
environment/archive/: setup.py
fun/: Makefile  README.md  build_depedencies
fun/01_int_to_english/: array.c  array.h  makefile  test_array.c
fun/02_opengl_test_triangle/: Makefile  README.md  log.h  setup.py  test_include.c  test_include.h  test_main.c  triangle.c
fun/03_opengl_tetris/: .README.md.swp  .cube.cpp.swp  .debug_assert.h.swp  .log.h.swp  .tetris.c.swp  Makefile  Makefile_generated  README.md  a.out  board.c  board.h  cube.cpp  glutfonts.c  piece.c  piece.h  piece.internal.h  piece.private.h  (+1 more)
fun/06_gl_fun/src/: CMakeLists.txt  app.h  main.cpp  status.h
fun/06_gl_fun/src/gl/: context.cpp  context.h  drawing_data_2d.h  render.cpp  render.h  render_2d_texture.cpp  render_2d_texture.h  shader.cpp  shader.h  text.cpp  text.h  text.private_2.h  text.private_3.h
fun/06_gl_fun/src/sdl/: context.cpp  context.h
fun/07/src/: App.cpp  App.h  CMakeLists.txt  app.cpp  app.h  macros.h  main.cpp
fun/07/src/sdl/: SDLWrapper.cpp  SDLWrapper.h
imgui/: Makefile  main.cpp  tetris.cpp  tetris.h
main/: Makefile  assets.cpp  assets.h  common.h  font.h  gl_wrapper.cpp  gl_wrapper.h  global.h  main.cpp  menu.cpp  render-shapes.h  render-sprites.cpp  render-sprites.h  render-surface.cpp  render-surface.h  shader_utils.cpp  shader_utils.h  square.cpp  tetris.cpp  tetris.h  text.cpp  text.h  ui.cpp  ui.h  window.cpp
tmp/: Makefile  Makefile_backup  game.c  main.cpp  test.cpp
(+368 files in other folders)
